# RustyCloud

./: .env  .gitignore  LICENSE  README.md  deploy.sh
.github/workflows/: ci-cd.yml  rustycloud.yml
app/: .gitignore  Cargo.toml  Dockerfile  README.md
app/src/: main.rs
app/src/handlers/: auth.rs  dashboard.rs  helpers.rs  mod.rs  require_auth.rs
app/src/logger/: logger.rs
app/src/services/: auth.rs  files.rs
app/src/storage/: auth.rs  database.rs  files.rs  mod.rs  models.rs
app/static/: index.html  signup.html
app/templates/: dashboard.html  index.html  signup.html
infra/: README.md  USAGE.md  kustomization.yaml
infra/mongodb/: configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
infra/monitoring/grafana/: configmap-dashboard-provider.yaml  configmap-dashboards.yaml  configmap-datasource.yaml  deployment.yaml  pvc.yaml  service.yaml
infra/monitoring/prometheus/: configmap.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
infra/namespaces/: database.yaml  monitoring.yaml
infra/redis/: deployment.yaml  service.yaml
infra/rustycloud/: deployment.yaml  ingress.yaml  pv.yaml  pvc.yaml  secret.yaml  service.yaml
tests/: test_routes.py
