[package]
name = "RustyCloud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"]}
axum-extra = { version = "0.12.6", features = ["cookie"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"]}
tera = "1"
sha2 = "0.11.0"
hex = "0.4.3"
chrono = "0.4.44"
